# Preagonal.GameServer

./: .gitignore  .gitmodules  AGENTS.md  COMPATIBILITY_RULES.md  CSHARP_ARCHITECTURE_PLAN.md  Directory.Build.props  GServharp.sln  GameServer.sln  GameServer.sln.DotSettings  KNOWN_BLOCKERS.md  PORTING_PLAN.md  SERVER_SPEC.md  TASK_COMPLETE_1TO1_PORT.md  TASK_CONTINUE_SAFE_PORT.md  TESTING_STRATEGY.md  renovate.json
docs/: cpp-missing-dependencies.md  csharp-dotnet-porting-plan.md  csharp-structure-mapping.md  original-cpp-server-technical-spec.md  protocol-blockers.md  protocol-cpp-source-map.md  protocol-dependency-call-sites.md  protocol-encoding-rules.md  protocol-login-handshake.md  protocol-open-questions.md  protocol-packet-catalog.md
docs/porting-milestones/: README.md  milestone-14-inventory-items-chat-guild.md  milestone-16-client-certification.md  milestone-4-account-persistence.md  milestone-6-warp-sendlevel-runtime-boundary.md  milestone-7-live-world-session-forwarding.md
docs/research/: build-dependencies.md  cpp-architecture.md  repository-structure.md  scripting-system.md  startup-runtime.md
docs/spec/: ACCOUNT_LOADING_SPEC.md  ACCOUNT_PERSISTENCE_SPEC.md  AUTH_SERVERLIST_OPEN_QUESTIONS.md  AUTH_SERVERLIST_PACKET_FLOW.md  BADDY_COMBAT_SPEC.md  CFILEQUEUE_FIXTURE_HARNESS.md  CFILEQUEUE_FLUSH_SPEC.md  CLIENT_CERTIFICATION_SPEC.md  CLIENT_COMPATIBILITY_MATRIX.md  COMBAT_PLAYER_GAMEPLAY_SPEC.md  FILE_TRANSFER_CACHE_SPEC.md  GOLDEN_FIXTURES.md  INBOUND_PACKET_DECODE_SPEC.md  (+43 more)
tools/gs2lib-fixtures/: CMakeLists.txt  README.md  build.ps1  main.cpp
(+335 files in other folders)
